assets/css/style.css
body {
	color: #FFFFFF;
	background: url("../images/skyrim_backdrop.jpg");
	height: 100%;
	background-repeat: no-repeat;
	background-size: 100% 100%;
	font-family: 'Cinzel', serif;
}

.navbar-custom {
	background-color: black;
	border-bottom: outset;
}

div, img {
    border: hidden;
    border-radius: 8px;
}

img {
	display: block;
    margin: 0 auto;
}

.enemyBox {
	text-align: center;
}

.enemy {
	border: groove;
	color: gray;
}

#heading {
	background-color: black;
	border: outset;
	/*height: 70px;*/
}

#headingTitle {
	margin-top: 1vh;
}

#hero, #opponent {
	background-color: black;
	border: outset;
	margin-bottom: 20px;
	/*margin-right: 20px;*/
	margin-right: 1vw;
}

#opponent {
	display: none;
}

#plyrImg {
	float: left;
	margin-right: 20px;
	/*margin-bottom: 70px;*/
	margin-bottom: 3vh;
}

#fightBtn, #runBtn {
	margin-bottom: 1vh;
}

#opponentDiv > img {
	float: left;
	margin-right: 20px;
	margin-bottom: 2vh;
}

#textBox {
	background-color: black;
	border: outset;
	height: 200px;
	margin-bottom: 2vh;
}

button {
	margin: 1vh 1px 1vh 0;
}

.modal-content {
	background-color: black;
	color: white;
}

#modalTextInn {
	height: 290px;

}

.close {
	color: white;
}

#innBox {
	background-color: black;
	height: 200px;
	border: outset;
	/*margin-left: 20px;*/
	margin-left: 1vw;
}

@media only screen and (max-width: 500px) {

	#hero, #opponent, #textBox {
		margin: 0;
	}

	#textBox {
		height: 260px;
	}

	/*#opponentDiv > img {
		display: none;
	}*/

	#plyrImg {
		display: none;
	}

	#hero, #opponent {
		height: 55vh;
	}

	#innBox {
		text-align: center;
	}

}

@media only screen and (max-width: 768px) {
	#hero, #opponent, #textBox, #innBox {
		margin: 0;
	}

	#innBox {
		text-align: center;
	}
}

